Update software list component to use outlines, and to make sure they are never cut off on drop-down menu open.
git-svn-id: https://devel.nmrbox.org/svn/nmrbox/trunk/web@7698 33504fd2-e2af-4168-9044-610c50ee6ce2

--- a/newweb/nmrbox/src/app/software/software-list.component.scss
+++ b/newweb/nmrbox/src/app/software/software-list.component.scss
@@ -55,7 +55,7 @@ mat-grid-list {
 }
 
 ::ng-deep .software-selector-dropdown {
-  min-width: calc(100% + 60px) !important;
+  min-width: calc(100% + 150px) !important;
 }
 
 .software-selector {
